# odd-ml

./: .gitignore  README.md  cq.sh  jnj.ipynb  pyproject.toml
.github/workflows/: lint_and_test.yaml
odd_ml/: __init__.py  client.py  errors.py  renderer.py
odd_ml/dataset_storage/: dataset_storage.py  s3_storage.py
odd_ml/domain/: __init__.py  aws_config.py  data_entities.py  data_entity.py  data_source.py  namespace.py  search.py
odd_ml/helpers/: __init__.py  asci_renderer.py  get_s3_path.py  oddrn_to_s3_path.py
odd_ml/http/: http_client.py
odd_ml/profiler/: __init__.py  pandas_profiler.py  profiler.py
odd_ml/utils/: __init__.py  datetime_to_str.py  log.py
tests/: test_data_entity.py  test_odd_ml.py  test_oddrn_to_s3_path.py
