[tool.poetry]
name = "odd-ml"
version = "0.5.2"
license='Apache-2.0'
description = "SDK for working with pipeline's metadata from notebooks"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
maintainers=[ "Pavel Makarichev <vixtir90@gmail.com>"]
readme='README.md'
homepage='https://opendatadiscovery.org/'
keywords=['odd','open data discovery', 'metadata', 'machine learning']

[tool.poetry.dependencies]
python = "^3.8.12"
pandas = "^1.4.2"
requests = "^2.27.1"
pydantic = "^1.9.0"
s3path = "^0.3.4"
prettytable = "^3.2.0"
python-dotenv = "^0.20.0"
s3fs = "^2022.3.0"
fastparquet = "^0.8.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
isort = "^5.10.1"
ipykernel = "^6.13.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
